# RunScope

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/migrations/: 001_init.sql  002_lpbf_layer_monitoring.sql
backend/src/: api.rs  app.rs  db.rs  main.rs  models.rs  ws.rs
backend/src/simulator/: anomaly.rs  engine.rs  mod.rs  pid.rs  recipe.rs  telemetry.rs
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AlertLog.tsx  ProcessVisualization.tsx  RunControls.tsx  RunHistoryTable.tsx  StatusCard.tsx  TelemetryChart.tsx
frontend/src/hooks/: useTelemetrySocket.ts
frontend/src/pages/: Dashboard.tsx  RunHistory.tsx
scripts/: demo-run.sh  dev.ps1  dev.sh  seed.sh  setup.ps1  setup.sh
